# python-best-practices

./: .env.example  README.md  main.py  pyproject.toml
docs/: SETUP.md
src/: __init__.py  cli.py  config.py  exceptions.py  logger.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_utils.py
